--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,13 @@ toml = "0.5"
 lazy_static = "1.4.0"
 regex = "1.3.1"
 csv = "1.1.1"
+
+[profile.release]
+opt-level = 3
+lto = true
+debug = false
+deubg-assertions = false
+overflow-checks = false
+panic = 'abort'
+incremental = false
+codegen-units = 1
